--- a/frontend/public/scss/top-app-bar.scss
+++ b/frontend/public/scss/top-app-bar.scss
@@ -338,6 +338,7 @@ header.site-header.new-design {
   padding: 0;
 
   .mitx-online-link {
+    font-family: Poppins;
     color: var(--Blue-Dark, #03152D);
     font-size: 18px;
     font-weight: 700;
