Instructor popup modal mobile view

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -140,7 +140,11 @@
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                           onClick="$('#instructor-modal-{{ member.id }}').modal('hide');
                                    $('#instructor-name-{{ member.id }}').focus();">
-                    <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M5 4.1239L8.94245 0.181446C9.18438 -0.0604821 9.57662 -0.0604821 9.81855 0.181446C10.0605 0.423375 10.0605 0.815619 9.81855 1.05755L5.8761 5L9.81855 8.94245C10.0605 9.18438 10.0605 9.57662 9.81855 9.81855C9.57662 10.0605 9.18438 10.0605 8.94245 9.81855L5 5.8761L1.05755 9.81855C0.815619 10.0605 0.423375 10.0605 0.181446 9.81855C-0.0604821 9.57662 -0.0604821 9.18438 0.181446 8.94245L4.1239 5L0.181446 1.05755C-0.0604821 0.815619 -0.0604821 0.423375 0.181446 0.181446C0.423375 -0.0604821 0.815619 -0.0604821 1.05755 0.181446L5 4.1239Z" fill="#03152D"/>
+</svg>
+                    </span>
                   </button>
                 </div>
                 <div class="modal-body">
