--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -305,7 +305,7 @@ body.new-design {
     }
 
     form {
-      margin-bottom: 20px;
+      margin-bottom: 0;
 
       .btn-upgrade {
         width: 100%;
@@ -321,7 +321,7 @@ body.new-design {
 
     .acheiving-text {
       font-weight: 600;
-      color: #A41E34;
+      color: black;
       margin-bottom: 1.5rem;
     }
 
@@ -340,19 +340,88 @@ body.new-design {
     }
   }
 
-  div.certificate-pricing-row { 
-    border: 1px solid #DFE5EC;
-    border-left: none;
-    border-right: none;
-    padding: 25px 0 15px 0;
+  div.date-selector-button-bar {
+    margin-bottom: 20px;
+
+    label {
+     font-weight: bold;
+     line-height: 24px; /* 160% */      
+    }
+
+    select {
+      display: flex;
+      width: 690px;
+      padding: 10px 10px;
+      align-items: flex-start;
+      gap: 10px;
+      border-radius: 5px;
+      border: 1px solid var(--BorderGrey, #DFE5EC);
+      background: #FFF;
+      box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.05);
+      font-size: 14px;
+    }
   }
 
-  div.certificate-pricing{
-    background-image: url('/static/images/products/certificate.png');
-    background-repeat: no-repeat;
-    background-position: 10px 5px;
+  div.certificate-pricing-row { 
+    border-radius: 5px;
+    border: 1px solid var(--BorderGrey, #DFE5EC);
+    background: rgba(3, 21, 45, 0.05);
+    padding: 15px;
+    margin: 0 1px;
 
-    padding-left: 43px;
+    div.certificate-pricing-logo {
+      svg {
+        width: 40px;
+        height: 44px;
+        fill: var(--GreyText, #6F7175);
+      }
+      margin-right: 10px;
+    }
+
+    p {
+      margin-bottom: 0;
+      span.text-danger {
+        font-size: 15px;
+      }
+    }
+
+    .col-6 {
+      padding: 0;
+
+      form {
+        margin-left: 12px;
+      }
+    }
+  }
+
+  div.upgrade-options-row {
+    margin: 20px 1px 10px 1px;
+
+    display: flex;
+    padding: 10px 0px 10px 0px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch; 
+
+    border-bottom: 1px solid var(--BorderGrey, #DFE5EC); 
+
+    div {
+      width: auto;
+      margin: 0;
+      padding: 0;
+
+      a {
+        color: black;
+      }
+    }
+  }
+
+  div.upsell-messaging-header {
+    margin: 20px 1px;
+    
+    div {
+      font-weight: 700;
+    }
   }
 
   .instructor-modal {
