--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -269,9 +269,7 @@ body.new-design {
               padding-left: 36px;
             }
             button.more-dates-link {
-              color: $brand-darker-bg;
               font-size: 14px;
-              text-decoration-line: underline;
               border: 0;
               padding-left: 0;
               background-color: transparent;
@@ -279,8 +277,6 @@ body.new-design {
             button.more-dates-link.enrolled {
               color: $green-darker;
               cursor: default;
-              text-decoration-line: none;
-
             }
           }
         }
@@ -309,7 +305,7 @@ body.new-design {
     }
 
     form {
-      margin-bottom: 20px;
+      margin-bottom: 0;
 
       .btn-upgrade {
         width: 100%;
@@ -321,12 +317,6 @@ body.new-design {
         background-repeat: no-repeat;
         padding: 11px 22px;
       }
-    }
-
-    .acheiving-text {
-      font-weight: 600;
-      color: #A41E34;
-      margin-bottom: 1.5rem;
     }
 
     ul { 
@@ -344,19 +334,100 @@ body.new-design {
     }
   }
 
-  div.certificate-pricing-row { 
-    border: 1px solid #DFE5EC;
-    border-left: none;
-    border-right: none;
-    padding: 25px 0 15px 0;
+  div.date-selector-button-bar {
+    margin-bottom: 20px;
+
+    label {
+     font-weight: bold;
+     line-height: 24px; /* 160% */      
+    }
+
+    select {
+      display: flex;
+      width: 690px;
+      padding: 10px 10px;
+      align-items: flex-start;
+      gap: 10px;
+      border-radius: 5px;
+      border: 1px solid var(--BorderGrey, #DFE5EC);
+      box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.05);
+      font-size: 14px;
+    }
   }
 
-  div.certificate-pricing{
-    background-image: url('/static/images/products/certificate.png');
-    background-repeat: no-repeat;
-    background-position: 10px 5px;
+  div.certificate-pricing-row { 
+    border-radius: 5px;
+    border: 1px solid var(--BorderGrey, #DFE5EC);
+    background: rgba(3, 21, 45, 0.05);
+    padding: 15px;
+    margin: 0 1px;
 
-    padding-left: 43px;
+    div.certificate-pricing-logo {
+      img {
+        width: 40px;
+        height: 44px;
+      }
+      margin-right: 10px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 0;
+      span.text-danger {
+        font-size: 15px;
+      }
+    }
+
+    .col-6 {
+      padding: 0;
+
+      form {
+        margin-left: 12px;
+
+        button.btn-upgrade {
+          font-size: 20px;
+          line-height: normal;
+          span {
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+
+  div.upgrade-options-row {
+    margin: 30px 1px 20px 1px;
+
+    display: flex;
+    padding: 0px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch; 
+
+    // border-bottom: 1px solid var(--BorderGrey, #DFE5EC); 
+    border: none;
+
+    div {
+      width: auto;
+      margin: 0;
+      padding: 0;
+
+      a {
+        color: black;
+      }
+
+      button {
+        padding: 0;
+      }
+    }
+  }
+
+  div.upsell-messaging-header {
+    margin: 20px 1px;
+    
+    div {
+      font-weight: 700;
+    }
   }
 
   .instructor-modal {
