--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -355,7 +355,7 @@ body.new-design {
 
     select {
       display: flex;
-      width: 690px;
+      width: 100%;
       padding: 10px 10px;
       align-items: flex-start;
       gap: 10px;
@@ -593,6 +593,32 @@ body.new-design {
 
     a {
       font-weight: 400;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body.new-design {
+    div.certificate-pricing-row {
+      div.certificate-pricing {
+        margin-bottom: 15px !important;
+      }
+
+      div.enroll-and-pay {
+        padding-left: 0px;
+        padding-right: 0px;
+      }
+    }
+
+    div.upgrade-options-row {
+      div {
+        width: 100%;
+        text-align: center;
+        p {
+          text-align: center;
+        }
+        margin-bottom: 12px;
+      }
     }
   }
 }
