Headings for required courses start date

--- a/cms/templates/course_list_card.html
+++ b/cms/templates/course_list_card.html
@@ -4,9 +4,9 @@
         <div class="program-course-card">
         <img src="{{card.featured_image}}" alt="">
         <div class="program-course-card-info">
-            <h4 class="startdate">
+            <div class="start-date">
             {{card.start_descriptor}}
-            </h4>
+            </div>
             <h3 class="title">{{card.course.title}}</h3>
         </div>
         </div>
