--- a/frontend/public/scss/product-page/program-courses.scss
+++ b/frontend/public/scss/product-page/program-courses.scss
@@ -80,10 +80,11 @@ body.new-design {
                         margin-top: 20px;
                     }
 
-                    h4 {
+                    .start-date {
                         font-weight: 400;
                         font-size: 12px;
                         color: #6f7175;
+                        margin-bottom: 0.5rem
                     }
 
                     h3 {
