--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -94,7 +94,7 @@ body.new-design {
       }
 
       .hide {
-        transition: opacity 200ms, display 200ms;
+        //transition: opacity 200ms, display 200ms;
         display: none;
         opacity: 0;
       }
