--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -93,6 +93,12 @@ body.new-design {
         max-height: 400rem;
       }
 
+      .hide {
+        //transition: opacity 200ms, display 200ms;
+        display: none;
+        opacity: 0;
+      }
+
       a.expand_here_link {
         opacity: 0;
         transition: opacity 225ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
