--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -31,7 +31,7 @@
                     <span class="badge-program-type">{{ page.product.program_type }}</span>
                 </div>
             {% endif %}
-              <h1>{{ page.title }}</h1>
+              <h1 class="text-break">{{ page.title }}</h1>
               {# Description field contents are already rendered wrapped in a <p> tag #}
               
               <section class="course-description">
