--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -90,7 +90,7 @@
                         <div class="member-card highlight-card" onClick="$('#instructor-modal-{{ member.id }}').modal('show');">
                           <img src="{% feature_img_src member.feature_image %}" alt="">
                           <div class="member-info">
-                            <h3 id="instructor-name-{{ member.id }}" class="name" role="button" tabindex="0">
+                            <h3 id="instructor-name-{{ member.id }}" class="name" role="button" tabindex="0" onClick="$('#instructor-modal-{{ member.id }}').modal('show');" onKeyUp="if (event.code === 'Enter') { $('#instructor-modal-{{ member.id }}').modal('show'); }">
                                 {{ member.instructor_name }}
                             </h3>
                             {% if member.instructor_title %}<h4 class="title">{{ member.instructor_title }}</h4>{% endif %}
@@ -148,7 +148,7 @@
 
           {% if instructors %}
           {% for member in instructors %}
-          <div class="modal instructor-modal" tabindex="-1" id="instructor-modal-{{ member.id }}">
+          <div class="modal instructor-modal" tabindex="-1" id="instructor-modal-{{ member.id }}" data-keyboard="true">
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
                 <div class="modal-header">
