Make label hidden but readable

--- a/frontend/public/scss/home-page/home-page-contact-row.scss
+++ b/frontend/public/scss/home-page/home-page-contact-row.scss
@@ -109,7 +109,6 @@ body.new-design {
           margin-top: 20px;
           margin-bottom: 40px;
           flex-wrap: wrap;
-          align-items: flex-end;
           .hs_email {
             order: 1;
             width: 70%;
@@ -118,7 +117,10 @@ body.new-design {
               max-width: 100%;
             }
             label {
-              font-size: 12px;
+              position:absolute;
+              width:1px;
+              height:1px;
+              overflow:hidden;
             }
             .input {
               .hs-input {
