--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -93,7 +93,7 @@
         @include media-breakpoint-down(sm) {
             padding: 10px 0px;
           }
-        h2 {
+        h1 {
             overflow: hidden;
             color: #FFF;
             text-align: center;
@@ -225,14 +225,14 @@
                 }
         
                 .catalog-page-item-count {
-                    color: var(--blue-dark, #03152D);
-                    text-align: right;
-                    font-family: Inter;
-                    font-size: 14px;
-                    font-weight: 400;
-                    margin-top: 15px;
-                    padding-left: 0;
-                    padding-right: 0;
+                    h2 {
+                        color: var(--blue-dark, #03152D);
+                        text-align: right;
+                        font-family: Inter;
+                        font-size: 14px;
+                        font-weight: 400;
+                        margin-top: 15px;
+                    }
         
                     .catalog-count-animation {
         
@@ -348,15 +348,19 @@
                 display: flex;
                 flex-wrap: wrap;
                 margin-left: 24px;
+                list-style: none;
                 gap: 24px;
+                padding: 0;
                 margin-bottom: 24px;
                 @include media-breakpoint-down(sm) {
                     justify-content: center;
                 }
+                li {
+                    width: 305px;
+                }
         
                 a {
                     text-decoration: none;
-                    width: 305px;
                     padding-right: 0;
                     padding-left: 0;
                 }
