--- a/frontend/public/scss/product-page/program-courses.scss
+++ b/frontend/public/scss/product-page/program-courses.scss
@@ -87,8 +87,9 @@ body.new-design {
                     .start-date {
                         font-weight: 400;
                         font-size: 12px;
-                        color: #6f7175;
-                        margin-bottom: 0.5rem
+                        color: rgba(112, 114, 117, 0.5);
+                        margin-bottom: 0.5rem;
+                        transition: $product-page-hover-time;
                     }
 
                     h3 {
@@ -96,19 +97,24 @@ body.new-design {
                         font-weight: 600;
                         line-height: 16px;
                         color: rgba(3, 21, 45, 0.5);
-                        transition: .25s;
+                        transition: $product-page-hover-time;
                     }
                 }
 
                 &:hover {
+                    .start-date {
+                        color: rgba(112, 114, 117, 1);
+                        transition: $product-page-hover-time;
+                    }
+
                     h3 {
                         color: rgba(3, 21, 45, 1);
-                        transition: .25s;
+                        transition: $product-page-hover-time;
                     }
 
                     img {
                         opacity: 1;
-                        transition: .25s;
+                        transition: $product-page-hover-time;
                     }
                 }
             }
