--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -56,3 +56,5 @@ $home-page-linkedin-blue: #0A66C2;
 $home-page-twitter-blue: #00A5E3;
 $home-page-border-purple: #491EA4;
 $home-page-subheader-light-blue: #03ADD2;
+
+$product-page-hover-time: 0.5s;
