--- a/frontend/public/scss/product-page/program-courses.scss
+++ b/frontend/public/scss/product-page/program-courses.scss
@@ -57,6 +57,7 @@ body.new-design {
                 max-width: 262px;
                 max-height: 259px;
                 height: 259px;
+                transition: .25s;
 
                 img {
                     max-width: 262px;
@@ -64,7 +65,10 @@ body.new-design {
                     height: 171px;
                     object-fit: cover;
                     object-position: center;
-
+                    background: rgba(0, 0, 0, 0.50);
+                    opacity: 0.5;
+                    transition: .25s;
+              
                     @include media-breakpoint-down(sm) {
                         display: block;
                         float: none;
@@ -83,21 +87,34 @@ body.new-design {
                     .start-date {
                         font-weight: 400;
                         font-size: 12px;
-                        color: #6f7175;
-                        margin-bottom: 0.5rem
+                        color: rgba(112, 114, 117, 0.5);
+                        margin-bottom: 0.5rem;
+                        transition: $product-page-hover-time;
                     }
 
                     h3 {
                         font-size: 14px;
                         font-weight: 600;
                         line-height: 16px;
-                        color: rgba(3, 21, 45, 0.85);
+                        color: rgba(3, 21, 45, 0.5);
+                        transition: $product-page-hover-time;
                     }
                 }
 
                 &:hover {
+                    .start-date {
+                        color: rgba(112, 114, 117, 1);
+                        transition: $product-page-hover-time;
+                    }
+
                     h3 {
-                        color: $brand-button-bg;
+                        color: rgba(3, 21, 45, 1);
+                        transition: $product-page-hover-time;
+                    }
+
+                    img {
+                        opacity: 1;
+                        transition: $product-page-hover-time;
                     }
                 }
             }
