--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -275,7 +275,12 @@
                     font-weight: 700;
                     flex-direction: row;
                     flex-wrap: nowrap;
-        
+
+                    .product-number {
+                        font-size: 13px;
+                        font-style: normal;
+                        font-weight: 400;
+                    }
                     @include media-breakpoint-up(md) {
                         gap: 20px;
                     }
